--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-fastapi
-uvicorn
-requests
-beautifulsoup4
+fastapi==0.104.1
+uvicorn==0.24.0
+requests==2.31.0
+beautifulsoup4==4.12.2
+pandas==2.1.3
+python-multipart==0.0.6
